fix(docs): fix navbar css on mobile

--- a/docs/content/assets/stylesheets/material.css
+++ b/docs/content/assets/stylesheets/material.css
@@ -31,13 +31,11 @@ code, pre, .codehilite {
 .md-nav__item {
   font-weight: 400;
   letter-spacing: 0;
-  transform: translateZ(0);
 }
 
 .md-ellipsis {
   font-weight: 400;
   letter-spacing: 0;
-  transform: translateZ(0);
 }
 
 /* Tokyo Night Dark Theme */
